--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
       <div class="sub">固定リスト / 各セクション 10 件</div>
     </header>
     <main>
+      <!-- Android -->
+      <section class="toc-section">
+        <h2>📱 Android</h2>
+        <div class="toc">
+          <a href="https://zenn.dev/rg687076/articles/c7c8a13d3e4c9d" class="card"><div class="num">011</div><div class="title">[BLE][Java]Android公式サンプルコードが動かないので修正してみた。</div></a>
+          <a href="android-2.html" class="card"><div class="num">001</div><div class="title">Activity Lifecycle</div></a>
+        </div>
+      </section>
+
       <!-- C++ -->
       <section class="toc-section">
         <h2>🖥️ C++</h2>
@@ -100,20 +109,20 @@
         </div>
       </section>
 
-      <!-- Android -->
+      <!-- Robot -->
       <section class="toc-section">
-        <h2>📱 Android</h2>
+        <h2>🤖 Robot (STEM)</h2>
         <div class="toc">
-          <a href="android-1.html" class="card"><div class="num">011</div><div class="title">Android Intro</div></a>
-          <a href="android-2.html" class="card"><div class="num">012</div><div class="title">Activity Lifecycle</div></a>
-          <a href="android-3.html" class="card"><div class="num">013</div><div class="title">UI Components</div></a>
-          <a href="android-4.html" class="card"><div class="num">014</div><div class="title">RecyclerView</div></a>
-          <a href="android-5.html" class="card"><div class="num">015</div><div class="title">Fragments</div></a>
-          <a href="android-6.html" class="card"><div class="num">016</div><div class="title">Jetpack Compose</div></a>
-          <a href="android-7.html" class="card"><div class="num">017</div><div class="title">Data Storage</div></a>
-          <a href="android-8.html" class="card"><div class="num">018</div><div class="title">Networking</div></a>
-          <a href="android-9.html" class="card"><div class="num">019</div><div class="title">Permissions</div></a>
-          <a href="android-10.html" class="card"><div class="num">020</div><div class="title">Publishing</div></a>
+          <a href="robot-1.html" class="card"><div class="num">031</div><div class="title">Robotics Intro</div></a>
+          <a href="robot-2.html" class="card"><div class="num">032</div><div class="title">Sensors</div></a>
+          <a href="robot-3.html" class="card"><div class="num">033</div><div class="title">Motors</div></a>
+          <a href="robot-4.html" class="card"><div class="num">034</div><div class="title">Arduino Basics</div></a>
+          <a href="robot-5.html" class="card"><div class="num">035</div><div class="title">Raspberry Pi</div></a>
+          <a href="robot-6.html" class="card"><div class="num">036</div><div class="title">ROS Overview</div></a>
+          <a href="robot-7.html" class="card"><div class="num">037</div><div class="title">AI & Robotics</div></a>
+          <a href="robot-8.html" class="card"><div class="num">038</div><div class="title">Autonomous Nav</div></a>
+          <a href="robot-9.html" class="card"><div class="num">039</div><div class="title">Robotics Competition</div></a>
+          <a href="robot-10.html" class="card"><div class="num">040</div><div class="title">STEM Projects</div></a>
         </div>
       </section>
 
@@ -131,23 +140,6 @@
           <a href="react-ts-8.html" class="card"><div class="num">028</div><div class="title">Styling in TSX</div></a>
           <a href="react-ts-9.html" class="card"><div class="num">029</div><div class="title">Deployment</div></a>
           <a href="react-ts-10.html" class="card"><div class="num">030</div><div class="title">Advanced Patterns</div></a>
-        </div>
-      </section>
-
-      <!-- Robot -->
-      <section class="toc-section">
-        <h2>🤖 Robot (STEM)</h2>
-        <div class="toc">
-          <a href="robot-1.html" class="card"><div class="num">031</div><div class="title">Robotics Intro</div></a>
-          <a href="robot-2.html" class="card"><div class="num">032</div><div class="title">Sensors</div></a>
-          <a href="robot-3.html" class="card"><div class="num">033</div><div class="title">Motors</div></a>
-          <a href="robot-4.html" class="card"><div class="num">034</div><div class="title">Arduino Basics</div></a>
-          <a href="robot-5.html" class="card"><div class="num">035</div><div class="title">Raspberry Pi</div></a>
-          <a href="robot-6.html" class="card"><div class="num">036</div><div class="title">ROS Overview</div></a>
-          <a href="robot-7.html" class="card"><div class="num">037</div><div class="title">AI & Robotics</div></a>
-          <a href="robot-8.html" class="card"><div class="num">038</div><div class="title">Autonomous Nav</div></a>
-          <a href="robot-9.html" class="card"><div class="num">039</div><div class="title">Robotics Competition</div></a>
-          <a href="robot-10.html" class="card"><div class="num">040</div><div class="title">STEM Projects</div></a>
         </div>
       </section>
     </main>
