--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>目次 — High-Tech</title>
+  <title>篤志ワークス - 目次</title>
   <style>
     :root {
       --bg-1:#02040a; --bg-2:#071122;
@@ -79,16 +79,15 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>目次 — High-Tech</h1>
-      <div class="sub">固定リスト / 各セクション 10 件</div>
+      <h1>篤志ワークス - 目次</h1>
+      <div class="sub">Android(1) C++(0) Robot(STEM)(0) React + TS(0)</div>
     </header>
     <main>
       <!-- Android -->
       <section class="toc-section">
         <h2>📱 Android</h2>
         <div class="toc">
-          <a href="https://zenn.dev/rg687076/articles/c7c8a13d3e4c9d" class="card"><div class="num">011</div><div class="title">[BLE][Java]Android公式サンプルコードが動かないので修正してみた。</div></a>
-          <a href="android-2.html" class="card"><div class="num">001</div><div class="title">Activity Lifecycle</div></a>
+          <a href="https://zenn.dev/rg687076/articles/c7c8a13d3e4c9d" class="card" target="_blank" rel="noopener noreferrer"><div class="num">011</div><div class="title">[BLE][Java]Android公式サンプルコードが動かないので修正してみた。</div></a>
         </div>
       </section>
 
