--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <header>
       <h1>篤志ワークス - 目次</h1>
       <div class="sub">Android(1) C++(0) Robot(STEM)(0) React + TS(0)</div>
+      <div class="sub">笑顔は正義 遊び心は向上心と同義 見やすさは思いやり 技術の民主化に感謝しコミットする 思いやりを形にする技術力 技術道。書道や武道みたく技術道ってのもあると思う</div>
     </header>
     <main>
       <!-- Android -->
